--- a/static/global.css
+++ b/static/global.css
@@ -3,7 +3,7 @@
 :root {
   --stripe: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.16' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
   /* --main-color: #4b6cc1; */
-  --main-color: #158cba;
+  --main-color: #c31f09;
   --main-bg: #191a1d;
 }
 
