--- a/static/global.css
+++ b/static/global.css
@@ -147,16 +147,15 @@ hr {
 }
 
 .btn-contact {
-  background: var(--main-color);
-  background-image: var(--stripe);
-  color: #f7f8f8;
-  border: 2px solid var(--main-color);
+  background: transparent;
+  color: #000;
+  border: 2px solid #000;
 }
 
 .btn-contact:hover {
-  background: transparent;
-  color: var(--main-color);
-  border: 2px solid var(--main-color);
+  background: #000;
+  color: #fff;
+  border: 2px solid #000;
 }
 
 @media (max-width: 1024px) {
